test-project-compiler/src/snapshots/test_package_compiler__generated_tests__duplicate_module.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/duplicate_module"
---
error: Duplicate module

The module `main` is defined multiple times.

First:  src/main.rakun
Second: test/main.rakun

