test-project-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_app_generation.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/erlang_app_generation"
---
//// /out/lib/the_package/_rakun_artefacts/main.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/main.cache_meta
<49 byte binary>

//// /out/lib/the_package/_rakun_artefacts/main.erl
-module(main).


//// /out/lib/the_package/ebin/my_erlang_application.app
{application, my_erlang_application, [
    {mod, {'my_erlang_application_sup', []}},
    {vsn, "0.1.0"},
    {applications, [rakun_otp,
                    rakun_stdlib,
                    inets,
                    midas,
                    simple_json,
                    ssl]},
    {description, "It's very cool"},
    {modules, [main]},
    {registered, []}
]}.
