test-project-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_escape_names.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 63
expression: "./cases/erlang_escape_names"
---
//// /out/lib/the_package/_rakun_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/one.cache_meta
<61 byte binary>

//// /out/lib/the_package/_rakun_artefacts/one.erl
-module(one).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export(['receive'/1]).

-file("src/one.rakun", 2).
-spec 'receive'(I) -> I.
'receive'(X) ->
    X.


//// /out/lib/the_package/_rakun_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/two.cache_meta
<136 byte binary>

//// /out/lib/the_package/_rakun_artefacts/two.erl
-module(two).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([qualified_call/0, qualified_value/0, unqualified_call/0, unqualified_value/0]).

-file("src/two.rakun", 4).
-spec qualified_call() -> integer().
qualified_call() ->
    one:'receive'(1).

-file("src/two.rakun", 8).
-spec qualified_value() -> fun((Q) -> Q).
qualified_value() ->
    fun one:'receive'/1.

-file("src/two.rakun", 12).
-spec unqualified_call() -> integer().
unqualified_call() ->
    one:'receive'(1).

-file("src/two.rakun", 16).
-spec unqualified_value() -> fun((S) -> S).
unqualified_value() ->
    fun one:'receive'/1.


//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.
