test-project-compiler/src/snapshots/test_package_compiler__generated_tests__imported_external_fns.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 173
expression: "./cases/imported_external_fns"
---
//// /out/lib/the_package/_rakun_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/one.cache_meta
<53 byte binary>

//// /out/lib/the_package/_rakun_artefacts/one.erl
-module(one).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([thing/0]).

-file("src/one.rakun", 2).
-spec thing() -> nil.
thing() ->
    thing:new().


//// /out/lib/the_package/_rakun_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_rakun_artefacts/two.cache_meta
<319 byte binary>

//// /out/lib/the_package/_rakun_artefacts/two.erl
-module(two).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([fn_reference_qualified/0, fn_reference_qualified_aliased/0, fn_reference_unqualified/0, fn_reference_unqualified_aliased/0, fn_call_qualified/0, fn_call_qualified_aliased/0, fn_call_unqualified/0, fn_call_unqualified_aliased/0, the_consts/0]).

-file("src/two.rakun", 27).
-spec fn_reference_qualified() -> fun(() -> nil).
fn_reference_qualified() ->
    fun thing:new/0.

-file("src/two.rakun", 31).
-spec fn_reference_qualified_aliased() -> fun(() -> nil).
fn_reference_qualified_aliased() ->
    fun thing:new/0.

-file("src/two.rakun", 35).
-spec fn_reference_unqualified() -> fun(() -> nil).
fn_reference_unqualified() ->
    fun thing:new/0.

-file("src/two.rakun", 39).
-spec fn_reference_unqualified_aliased() -> fun(() -> nil).
fn_reference_unqualified_aliased() ->
    fun thing:new/0.

-file("src/two.rakun", 45).
-spec fn_call_qualified() -> nil.
fn_call_qualified() ->
    thing:new().

-file("src/two.rakun", 49).
-spec fn_call_qualified_aliased() -> nil.
fn_call_qualified_aliased() ->
    thing:new().

-file("src/two.rakun", 53).
-spec fn_call_unqualified() -> nil.
fn_call_unqualified() ->
    thing:new().

-file("src/two.rakun", 57).
-spec fn_call_unqualified_aliased() -> nil.
fn_call_unqualified_aliased() ->
    thing:new().

-file("src/two.rakun", 14).
-spec the_consts() -> nil.
the_consts() ->
    _ = fun thing:new/0,
    _ = fun thing:new/0,
    _ = fun thing:new/0,
    _ = fun thing:new/0,
    thing:new(),
    thing:new(),
    thing:new(),
    thing:new().


//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.
